--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
 	    <meta charset="utf-8">
 		<title>Nick Fox-Gieg - Orbital Line 2</title>
     	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-   		<link rel="stylesheet" href="./css/main.css">
+   		<style>
+   			body {
+				background: black;
+				margin: 0px;
+				overflow: hidden;
+			}
+
+			* {
+				cursor: none;
+			}
+   		</style>
 		<script src="./js/libraries/threejs/three.min.js"></script>
 		<script src="https://fox-gieg.com/js/libraries/threejs/133/loaders/GLTFLoader.js"></script>
 		<script src="https://fox-gieg.com/js/libraries/threejs/133/loaders/DRACOLoader.js"></script>
